# DialClient

./: README.md  pyproject.toml
src/: dial.py  ssdp.py
